--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,13 @@
 <nav class="p-20">
-  <ul>
-    <li>
+  <ul class="d-flex">
+    <li class="mr-15">
       <a [routerLink]="['/books']" routerLinkActive="router-link-active">
         Books
       </a>
+    </li>
+
+    <li>
+      <a href="" [routerLink]="['/create-book']">Add Book</a>
     </li>
   </ul>
 </nav>
