--- a/src/css/Bootstrap/_layout.scss
+++ b/src/css/Bootstrap/_layout.scss
@@ -1,58 +1,3 @@
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  line-height: 1;
-}
-
-html {
-  scroll-behavior: smooth;
-  font-size: 62.5%;
-}
-
-body {
-  font-size: 1.6rem;
-}
-
-ul,
-li {
-  list-style: none;
-  list-style-type: none;
-}
-
-button {
-  cursor: pointer;
-  border: none;
-  outline: none;
-  transition: transform 0.5s;
-  font-family: inherit;
-  background: none;
-
-  &:active {
-    transform: scale(0.7);
-  }
-}
-
-img {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-a {
-  text-decoration: none;
-  transition: all 0.5s;
-  color: inherit;
-  display: inline-block;
-}
-
-i {
-  font-size: inherit;
-  font-weight: inherit;
-  display: inline-block;
-}
-
 .container {
   max-width: 120.2rem;
   margin: 0 auto;
@@ -60,70 +5,26 @@ i {
   padding-right: 1.5rem;
 }
 
-.nav {
-  &__burger-button {
-    cursor: pointer;
+.row {
+  margin-left: -1.5rem;
+  margin-right: -1.5rem;
 
-    [class*="burger-row"] {
-      width: 2.2rem;
-      padding: 0.03rem 0;
-      background-color: #e75a3b;
-      margin: 0.6rem 0;
-      border-radius: 0.3rem;
-      transition: transform 0.5s;
-    }
-  }
-
-  &__burger-button-clicked {
-    .burger-row-2 {
-      display: none;
-    }
-
-    .burger-row-1 {
-      transform: rotate(45deg) translate(0.2rem, 0.3rem);
-    }
-
-    .burger-row-3 {
-      transform: rotate(-45deg) translate(0.2rem, -0.3rem);
-    }
+  & > div[class*="col-"] {
+    padding: 0 1.5rem;
   }
 }
 
-.form-control {
-  background: #fff;
-  border: 1px solid #ced4da;
-  outline: none;
-  display: inline-block;
-  padding: 0.8rem 1.2rem;
-  transition: all 0.5s;
-  border-radius: 0.5rem;
-  resize: none;
-  font-family: inherit;
-
-  &-valid {
-    background: transparent;
-    outline: none;
-    border: none;
-    padding: 2rem;
-  }
-
-  &:focus {
-    color: #495057;
-    background-color: #fff;
-    border-color: #80bdff;
-    outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-  }
-}
-
-.fill {
+.filter {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: 100vh;
 }
 
 .d-flex {
   display: flex;
+
+  &-wrap {
+    flex-wrap: wrap;
+  }
 
   &-bw {
     display: flex;
@@ -142,6 +43,30 @@ i {
     flex-wrap: wrap;
     justify-content: center;
   }
+
+  &-even {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+  }
+}
+
+.align {
+  &-center {
+    align-items: center;
+  }
+
+  &-end {
+    align-items: flex-end;
+  }
+
+  &-start {
+    align-items: flex-start;
+  }
+
+  &-base {
+    align-items: baseline;
+  }
 }
 
 @for $i from 1 through 10 {
@@ -158,10 +83,14 @@ i {
   }
 }
 
-@for $i from 1 through 8 {
+@for $i from 1 through 9 {
   .fw-#{$i} {
     font-weight: 100 * $i;
   }
+}
+
+.m-auto {
+  margin: auto;
 }
 
 @for $i from 1 through 100 {
@@ -194,33 +123,6 @@ i {
   }
 }
 
-.align {
-  &-center {
-    align-items: center;
-  }
-
-  &-end {
-    align-items: flex-end;
-  }
-
-  &-start {
-    align-items: flex-start;
-  }
-
-  &-base {
-    align-items: baseline;
-  }
-}
-
-.row {
-  margin-left: -1.5rem;
-  margin-right: -1.5rem;
-
-  & > div {
-    padding: 0 1.5rem;
-  }
-}
-
 @for $i from 1 through 12 {
   .col-#{$i} {
     min-width: 8.33% * $i;
@@ -230,20 +132,6 @@ i {
 
 .col-2dot4 {
   width: 20%;
-}
-
-.text {
-  &-right {
-    text-align: right;
-  }
-
-  &-center {
-    text-align: center;
-  }
-
-  &-upper {
-    text-transform: uppercase;
-  }
 }
 
 @media (min-width: 576px) {
