--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,88 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import "./css/template";
-@import "./css/mixin";
+@import "./css/Bootstrap/bootstrap";
 
-body {
-  color: #232323;
-}
 
-h1 {
-  margin: 3rem 0;
-}
 
-.label {
-  padding: 0 2rem;
-  display: flex;
-
-  li {
-    flex: 1;
-    text-align: center;
-    background-color: #ddd;
-    font-weight: 600;
-    padding: 1.5rem;
-    border: 0.1rem solid #ccc;
-    border-bottom: 0;
-    border-right: 0;
-  }
-
-  li:last-child {
-    border-right: 0.1rem solid #ccc;
-  }
-}
-
-.list-book {
-  padding: 0 2rem;
-
-  li {
-    border: 0.1rem solid #ccc;
-    border-bottom: 0;
-    font-size: 1.4rem;
-    cursor: pointer;
-
-    div {
-      padding: 1.5rem;
-      flex: 1;
-
-      border-right: 0.1rem solid #ccc;
-    }
-
-    div:last-child {
-      border-right: 0;
-    }
-
-    .book-tag {
-      font-size: 1.25rem;
-
-      span {
-        background-color: #ddd;
-        font-weight: 700;
-        display: inline-block;
-        padding: 0.4rem;
-        border-radius: 0.4rem;
-      }
-      span:not(:last-child) {
-        margin-right: 1rem;
-      }
-    }
-  }
-
-  li:last-child {
-    border-bottom: 0.1rem solid #ccc;
-  }
-
-  li.selected {
-    background-color: #ccc;
-  }
-}
-
-.detail {
-  padding: 2rem;
-
-  table {
-    border-collapse: collapse;
-    td {
-      border: 0.1rem solid #ccc;
-      padding: 1rem 0.5rem;
-    }
-  }
-}
